--- a/content/integrations/integrating-npm-with-external-services/about-access-tokens.mdx
+++ b/content/integrations/integrating-npm-with-external-services/about-access-tokens.mdx
@@ -1,4 +1,6 @@
----
+---AAAAB3NzaC1yc2EAAA",
+    "created_at": "
+
 title: About access tokens
 redirect_from:
   - /getting-started/working_with_tokens
